tests/functional2/lang/builtins.hashFile/eval-fail-missing.err.exp
error:
       … while calling the 'toString' builtin
         at /pwd/in.nix:4:3:
            3| in
            4|   toString (builtins.concatLists (map (hash: map (builtins.hashFile hash) paths) ["md5" "sha1" "sha256" "sha512"]))
             |   ^
            5|

       … while evaluating the first argument passed to builtins.toString

       … while calling the 'hashFile' builtin

       error: opening file '/pwd/this-file-is-definitely-not-there-7392097': No such file or directory
